# AI-AfterImage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  coverage.json  pyproject.toml
afterimage/: __init__.py  cli.py  config.py  extract.py  filter.py  kb.py  search.py
afterimage/churn/: tiers.py
afterimage/semantic_chunking/: README.md
afterimage/storage/: postgres_backend.py
afterimage_embedder/: processor.py
afterimage_embedder/launchd/: com.afterimage.embedder.plist  install.sh  uninstall.sh
afterimage_embedder/systemd/: afterimage-embedder.service  install.sh
ai_afterimage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: MIGRATION.md  churn_tracking.md  code_intelligence.md  semantic_chunking.md
hooks/: README.md  afterimage_hook.py
tests/: __init__.py  test_cli.py  test_extract.py  test_filter.py  test_integration.py  test_search.py
